--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,8 @@
     </head>
 
     <body>
-        <h1>Hello, world!</h1>
+        <h1>Welcome to my website!</h1>
+        Hello, world!
     </body>
 
 </html>
